--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   video_player: ^2.9.2
   chewie: ^1.8.5
   youtube_player_flutter: ^9.0.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
